--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Shop</title>
   </head>
   <body>
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar bg-dark">
       <div
         class="container-xl d-flex align-items-center justify-content-between"
       >
@@ -68,13 +68,84 @@
           id="offcanvasNavbar"
           aria-labelledby="offcanvasNavbarLabel"
         >
-          <div class="offcanvas-header justify-content-end">
+          <div class="offcanvas-header align-items-end flex-column">
             <button
               type="button"
               class="btn-close text-reset"
               data-bs-dismiss="offcanvas"
               aria-label="Close"
             ></button>
+            <p
+              class="offcanvas-title align-self-start"
+              id="offcanvasNavbarLabel"
+            >
+              MENU
+            </p>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">MAN</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Accessories</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Bags</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Denim</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">T-Shirts</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">WOMAN</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#myid"
+                  >Accessories</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#"
+                  >Jackets & Coats</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Polos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">T-Shirts</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Shirts</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">KIDS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Accessories</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#"
+                  >Jackets & Coats</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Polos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">T-Shirts</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Bags</a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -96,7 +167,7 @@
     </div>
 
     <div class="offer container-xl grid">
-      <div class="offer__card g-col-12 g-col-md-4 position-relative">
+      <div class="offer__card g-col-3 g-col-md-1 position-relative">
         <div
           class="offer-title position-absolute top-50 start-50 translate-middle"
         >
@@ -106,7 +177,7 @@
         <img src="images/offer/1.png" alt="offerimg1" />
       </div>
 
-      <div class="offer__card g-col-12 g-col-md-4 position-relative">
+      <div class="offer__card g-col-3 g-col-md-1 position-relative">
         <div
           class="offer-title position-absolute top-50 start-50 translate-middle"
         >
@@ -115,7 +186,7 @@
         </div>
         <img src="images/offer/2.png" alt="offerimg2" />
       </div>
-      <div class="offer__card g-col-12 g-col-md-4 position-relative">
+      <div class="offer__card g-col-3 g-col-md-1 position-relative">
         <div
           class="offer-title position-absolute top-50 start-50 translate-middle"
         >
@@ -124,7 +195,7 @@
         </div>
         <img src="images/offer/3.png" alt="offerimg3" />
       </div>
-      <div class="offer__card g-col-12 position-relative">
+      <div class="offer__card g-col-3 position-relative">
         <div
           class="offer-title position-absolute top-50 start-50 translate-middle"
         >
