--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <a class="d-none d-md-block" href="#">
             <div class="cart position-relative">
               <div
-                class="cart-counter position-absolute top-0 start-100 translate-middle"
+                class="cart-counter position-absolute top-0 start-100 translate-middle bg-primary"
               >
                 5
               </div>
@@ -151,20 +151,20 @@
       </div>
     </nav>
 
-    <div class="first-page">
+    <header class="first-page">
       <div class="container-xl h-100">
         <div class="grid align-items-center">
           <img class="d-none d-md-block" src="images/head/man.png" alt="" />
           <div class="naming d-flex justify-content-center">
-            <div class="line"></div>
+            <div class="line bg-primary"></div>
             <div class="header">
               THE BRAND
-              <p>OF LUXERIOUS <span>FASHION</span></p>
+              <p>OF LUXERIOUS <span class="text-primary">FASHION</span></p>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </header>
 
     <div class="offer container-xl grid">
       <div class="offer__card g-col-3 g-col-md-1 position-relative">
@@ -172,7 +172,7 @@
           class="offer-title position-absolute top-50 start-50 translate-middle"
         >
           30% OFF
-          <p>FOR WOMEN</p>
+          <p class="text-primary">FOR WOMEN</p>
         </div>
         <img src="images/offer/1.png" alt="offerimg1" />
       </div>
@@ -182,7 +182,7 @@
           class="offer-title position-absolute top-50 start-50 translate-middle"
         >
           HOT DEAL
-          <p>FOR MEN</p>
+          <p class="text-primary">FOR MEN</p>
         </div>
         <img src="images/offer/2.png" alt="offerimg2" />
       </div>
@@ -191,7 +191,7 @@
           class="offer-title position-absolute top-50 start-50 translate-middle"
         >
           NEW ARRIVALS
-          <p>FOR KIDS</p>
+          <p class="text-primary">FOR KIDS</p>
         </div>
         <img src="images/offer/3.png" alt="offerimg3" />
       </div>
@@ -200,12 +200,152 @@
           class="offer-title position-absolute top-50 start-50 translate-middle"
         >
           LUXIROUS & TRENDY
-          <p>ACCESORIES</p>
+          <p class="text-primary">ACCESORIES</p>
         </div>
         <img src="images/offer/4.png" alt="offerimg4" />
       </div>
     </div>
+    <div class="fetured container-xl d-flex flex-column align-items-center">
+      <h1>Fetured Items</h1>
+      <p>Shop for items based on what we featured in this week</p>
+      <div class="fetured__cards grid">
+        <figure class="fetured__card">
+          <div class="img__wrapper w-100 position-relative">
+            <div class="hover_bg position-absolute w-100 h-100">
+              <img
+                class="position-absolute top-50 start-50 translate-middle"
+                src="images/add_to_cart.svg"
+                alt="add_to_cart"
+              />
+            </div>
+            <img src="images/fetured/1.png" alt="futured-image-1" />
+          </div>
 
+          <div class="fetured__card-desc">
+            <h3>ELLERY X M'O CAPSULE</h3>
+            <p class="desc-text">
+              Known for her sculptural takes on traditional tailoring,
+              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+            </p>
+            <p class="desc-price text-primary">$52.00</p>
+          </div>
+        </figure>
+        <figure class="fetured__card">
+          <div class="img__wrapper w-100 position-relative">
+            <div class="hover_bg position-absolute w-100 h-100">
+              <img
+                class="position-absolute top-50 start-50 translate-middle"
+                src="images/add_to_cart.svg"
+                alt="add_to_cart"
+              />
+            </div>
+            <img src="images/fetured/2.png" alt="futured-image-2" />
+          </div>
+
+          <div class="fetured__card-desc">
+            <h3>ELLERY X M'O CAPSULE</h3>
+            <p class="desc-text">
+              Known for her sculptural takes on traditional tailoring,
+              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+            </p>
+            <p class="desc-price text-primary">$52.00</p>
+          </div>
+        </figure>
+        <figure class="fetured__card">
+          <div class="img__wrapper w-100 position-relative">
+            <div class="hover_bg position-absolute w-100 h-100">
+              <img
+                class="position-absolute top-50 start-50 translate-middle"
+                src="images/add_to_cart.svg"
+                alt="add_to_cart"
+              />
+            </div>
+            <img src="images/fetured/3.png" alt="futured-image-3" />
+          </div>
+
+          <div class="fetured__card-desc">
+            <h3>ELLERY X M'O CAPSULE</h3>
+            <p class="desc-text">
+              Known for her sculptural takes on traditional tailoring,
+              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+            </p>
+            <p class="desc-price text-primary">$52.00</p>
+          </div>
+        </figure>
+        <figure class="fetured__card">
+          <div class="img__wrapper w-100 position-relative">
+            <div class="hover_bg position-absolute w-100 h-100">
+              <img
+                class="position-absolute top-50 start-50 translate-middle"
+                src="images/add_to_cart.svg"
+                alt="add_to_cart"
+              />
+            </div>
+            <img src="images/fetured/4.png" alt="futured-image-4" />
+          </div>
+
+          <div class="fetured__card-desc">
+            <h3>ELLERY X M'O CAPSULE</h3>
+            <p class="desc-text">
+              Known for her sculptural takes on traditional tailoring,
+              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+            </p>
+            <p class="desc-price text-primary">$52.00</p>
+          </div>
+        </figure>
+        <figure class="fetured__card">
+          <div class="img__wrapper w-100 position-relative">
+            <div class="hover_bg position-absolute w-100 h-100">
+              <img
+                class="position-absolute top-50 start-50 translate-middle"
+                src="images/add_to_cart.svg"
+                alt="add_to_cart"
+              />
+            </div>
+            <img src="images/fetured/5.png" alt="futured-image-5" />
+          </div>
+
+          <div class="fetured__card-desc">
+            <h3>ELLERY X M'O CAPSULE</h3>
+            <p class="desc-text">
+              Known for her sculptural takes on traditional tailoring,
+              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+            </p>
+            <p class="desc-price text-primary">$52.00</p>
+          </div>
+        </figure>
+        <figure class="fetured__card">
+          <div class="img__wrapper w-100 position-relative">
+            <div class="hover_bg position-absolute w-100 h-100">
+              <img
+                class="position-absolute top-50 start-50 translate-middle"
+                src="images/add_to_cart.svg"
+                alt="add_to_cart"
+              />
+            </div>
+            <img src="images/fetured/6.png" alt="futured-image-6" />
+          </div>
+
+          <div class="fetured__card-desc">
+            <h3>ELLERY X M'O CAPSULE</h3>
+            <p class="desc-text">
+              Known for her sculptural takes on traditional tailoring,
+              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+            </p>
+            <p class="desc-price text-primary">$52.00</p>
+          </div>
+        </figure>
+      </div>
+      <button type="button" class="btn text-center btn-outline-primary">
+        Browse All Product
+      </button>
+    </div>
+    <div class="services container-xl grid bg-black">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+      voluptates quia, sed animi dolore exercitationem, doloribus nesciunt iusto
+      nobis reprehenderit a non sunt, illo perferendis cumque rerum? Dolorum,
+      quaerat ut?
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
       integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
