--- a/catalog.html
+++ b/catalog.html
@@ -433,6 +433,20 @@
           </div>
         </figure>
       </div>
+      <div class="pagination">
+        <a href="#">
+          <img src="images/chevron.svg" alt="" />
+        </a>
+        <a class="active" href="#">1</a>
+        <a href="#">2</a>
+        <a href="#">3</a>
+        <a href="#">4</a>
+        <a href="#">5</a>
+        <a href="#">6.....20</a>
+        <a href="#">
+          <img src="images/chevron.svg" alt="" />
+        </a>
+      </div>
     </section>
 
     <section class="bg-black">
@@ -466,6 +480,7 @@
         </div>
       </div>
     </section>
+
     <div class="subscribe">
       <div
         class="container-xl text-center align-items-center align-items-lg-end d-flex flex-column flex-lg-row justify-content-lg-between"
