--- a/product.html
+++ b/product.html
@@ -206,7 +206,7 @@
         <span class="carousel-control-prev-icon" aria-hidden="true">
           <span class="carousel-control-prev-icon-arrow"></span>
         </span>
-        <span class="visually-hidden">Previous</span>
+        <span class="visually-hidden m-0">Previous</span>
       </button>
       <button
         class="carousel-control-next"
@@ -217,7 +217,7 @@
         <span class="carousel-control-next-icon" aria-hidden="true">
           <span class="carousel-control-next-icon-arrow"></span
         ></span>
-        <span class="visually-hidden">Next</span>
+        <span class="visually-hidden m-0">Next</span>
       </button>
     </div>
 
