--- a/product.html
+++ b/product.html
@@ -1,290 +1,290 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="index.css" />
-    <title>Product</title>
-  </head>
-  <body>
-    <nav class="navbar bg-black">
-      <div
-        class="container-xl d-flex align-items-center justify-content-between"
-      >
-        <div class="d-flex align-items-center">
-          <a class="navbar-brand" href="#">
-            <img
-              src="images/navbar/logo.png"
-              alt="logo"
-              class="d-inline-block"
-            />
-          </a>
-          <a href="#">
-            <img
-              src="images/navbar/search.svg"
-              alt="search"
-              class="d-inline-block align-text-top"
-            />
-          </a>
-        </div>
-        <div class="d-flex align-items-center gap-4">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasNavbar"
-            aria-controls="offcanvasNavbar"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="d-none d-md-block" href="#">
-            <img
-              src="images/navbar/profile.svg"
-              alt="profile"
-              class="d-inline-block align-text-top"
-            />
-          </a>
-          <a class="d-none d-md-block" href="#">
-            <div class="cart position-relative">
-              <div
-                class="cart-counter position-absolute top-0 start-100 translate-middle bg-primary"
-              >
-                5
-              </div>
-              <img
-                src="images/navbar/cart.svg"
-                alt="cart"
-                class="d-inline-block align-text-top"
-              />
-            </div>
-          </a>
-        </div>
-
-        <div
-          class="offcanvas offcanvas-end"
-          tabindex="-1"
-          id="offcanvasNavbar"
-          aria-labelledby="offcanvasNavbarLabel"
-        >
-          <div class="offcanvas-header align-items-end flex-column">
-            <button
-              type="button"
-              class="btn-close text-reset"
-              data-bs-dismiss="offcanvas"
-              aria-label="Close"
-            ></button>
-            <p
-              class="offcanvas-title align-self-start"
-              id="offcanvasNavbarLabel"
-            >
-              MENU
-            </p>
-          </div>
-          <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">MAN</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Accessories</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Bags</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Denim</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">T-Shirts</a>
-              </li>
-            </ul>
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">WOMAN</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#myid"
-                  >Accessories</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#"
-                  >Jackets & Coats</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Polos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">T-Shirts</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Shirts</a>
-              </li>
-            </ul>
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">KIDS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Accessories</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#"
-                  >Jackets & Coats</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Polos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">T-Shirts</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Bags</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
-
-    <header class="newArrivals">
-      <div
-        class="container-xl d-sm-flex justify-content-sm-between align-items-sm-center"
-      >
-        <h1 class="text-primary text-center">NEW ARRIVALS</h1>
-        <nav aria-label="breadcrumb">
-          <ol class="breadcrumb justify-content-center">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Men</a></li>
-            <li class="breadcrumb-item active" aria-current="page">
-              NEW ARRIVALS
-            </li>
-          </ol>
-        </nav>
-      </div>
-    </header>
-
-    <div
-      id="carouselExampleControls"
-      class="carousel slide"
-      data-bs-ride="carousel"
-      data-bs-interval="false"
-    >
-      <div class="carousel-inner h-100 container-xl">
-        <div class="carousel-item active">
-          <img
-            src="images/product/product-image.png"
-            class="d-block"
-            alt="product-image"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            src="images/product/product-image.png"
-            class="d-block"
-            alt="product-image"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            src="images/product/product-image.png"
-            class="d-block"
-            alt="product-image"
-          />
-        </div>
-      </div>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carouselExampleControls"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true">
+<head>
+		<meta charset="UTF-8"/>
+		<meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+		<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+		<link href="favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+		<link href="index.css" rel="stylesheet"/>
+		<title>Product</title>
+</head>
+<body>
+<nav class="navbar bg-black">
+		<div
+				class="container-xl d-flex align-items-center justify-content-between"
+		>
+				<div class="d-flex align-items-center">
+						<a class="navbar-brand" href="#">
+								<img
+										alt="logo"
+										class="d-inline-block"
+										src="images/navbar/logo.png"
+								/>
+						</a>
+						<a href="#">
+								<img
+										alt="search"
+										class="d-inline-block align-text-top"
+										src="images/navbar/search.svg"
+								/>
+						</a>
+				</div>
+				<div class="d-flex align-items-center gap-4">
+						<button
+								aria-controls="offcanvasNavbar"
+								class="navbar-toggler"
+								data-bs-target="#offcanvasNavbar"
+								data-bs-toggle="offcanvas"
+								type="button"
+						>
+								<span class="navbar-toggler-icon"></span>
+						</button>
+						<a class="d-none d-md-block" href="#">
+								<img
+										alt="profile"
+										class="d-inline-block align-text-top"
+										src="images/navbar/profile.svg"
+								/>
+						</a>
+						<a class="d-none d-md-block" href="#">
+								<div class="cart position-relative">
+										<div
+												class="cart-counter position-absolute top-0 start-100 translate-middle bg-primary"
+										>
+												5
+										</div>
+										<img
+												alt="cart"
+												class="d-inline-block align-text-top"
+												src="images/navbar/cart.svg"
+										/>
+								</div>
+						</a>
+				</div>
+				<div
+						aria-labelledby="offcanvasNavbarLabel"
+						class="offcanvas offcanvas-end"
+						id="offcanvasNavbar"
+						tabindex="-1"
+				>
+						<div class="offcanvas-header align-items-end flex-column">
+								<button
+										aria-label="Close"
+										class="btn-close text-reset"
+										data-bs-dismiss="offcanvas"
+										type="button"
+								></button>
+								<p
+										class="offcanvas-title align-self-start"
+										id="offcanvasNavbarLabel"
+								>
+										MENU
+								</p>
+						</div>
+						<div class="offcanvas-body">
+								<ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+										<li class="nav-item">
+												<a aria-current="page" class="nav-link" href="#">MAN</a>
+										</li>
+										<li class="nav-item">
+												<a aria-current="page" class="nav-link" href="#">Accessories</a>
+										</li>
+										<li class="nav-item">
+												<a aria-current="page" class="nav-link" href="#">Bags</a>
+										</li>
+										<li class="nav-item">
+												<a class="nav-link" href="#">Denim</a>
+										</li>
+										<li class="nav-item">
+												<a class="nav-link" href="#">T-Shirts</a>
+										</li>
+								</ul>
+								<ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+										<li class="nav-item">
+												<a aria-current="page" class="nav-link" href="#">WOMAN</a>
+										</li>
+										<li class="nav-item">
+												<a aria-current="page" class="nav-link" href="#"
+												>Accessories</a
+												>
+										</li>
+										<li class="nav-item">
+												<a aria-current="page" class="nav-link" href="#"
+												>Jackets & Coats</a
+												>
+										</li>
+										<li class="nav-item">
+												<a class="nav-link" href="#">Polos</a>
+										</li>
+										<li class="nav-item">
+												<a class="nav-link" href="#">T-Shirts</a>
+										</li>
+										<li class="nav-item">
+												<a class="nav-link" href="#">Shirts</a>
+										</li>
+								</ul>
+								<ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+										<li class="nav-item">
+												<a aria-current="page" class="nav-link" href="#">KIDS</a>
+										</li>
+										<li class="nav-item">
+												<a aria-current="page" class="nav-link" href="#">Accessories</a>
+										</li>
+										<li class="nav-item">
+												<a aria-current="page" class="nav-link" href="#"
+												>Jackets & Coats</a
+												>
+										</li>
+										<li class="nav-item">
+												<a class="nav-link" href="#">Polos</a>
+										</li>
+										<li class="nav-item">
+												<a class="nav-link" href="#">T-Shirts</a>
+										</li>
+										<li class="nav-item">
+												<a class="nav-link" href="#">Bags</a>
+										</li>
+								</ul>
+						</div>
+				</div>
+		</div>
+</nav>
+<header class="newArrivals">
+		<div
+				class="container-xl d-sm-flex justify-content-sm-between align-items-sm-center"
+		>
+				<h1 class="text-primary text-center">NEW ARRIVALS</h1>
+				<nav aria-label="breadcrumb">
+						<ol class="breadcrumb justify-content-center">
+								<li class="breadcrumb-item"><a href="#">Home</a></li>
+								<li class="breadcrumb-item"><a href="#">Men</a></li>
+								<li aria-current="page" class="breadcrumb-item active">
+										NEW ARRIVALS
+								</li>
+						</ol>
+				</nav>
+		</div>
+</header>
+<div
+		class="carousel slide"
+		data-bs-interval="false" id="carouselExampleControls"
+>
+		<div class="carousel-inner h-100 container-xl">
+				<div class="carousel-item active">
+						<img
+								alt="product-image"
+								class="d-block"
+								src="images/product/product-image.png"
+						/>
+				</div>
+				<div class="carousel-item">
+						<img
+								alt="product-image"
+								class="d-block"
+								src="images/product/product-image.png"
+						/>
+				</div>
+				<div class="carousel-item">
+						<img
+								alt="product-image"
+								class="d-block"
+								src="images/product/product-image.png"
+						/>
+				</div>
+		</div>
+		<button
+				class="carousel-control-prev"
+				data-bs-slide="prev"
+				data-bs-target="#carouselExampleControls"
+				type="button"
+		>
+        <span aria-hidden="true" class="carousel-control-prev-icon">
           <span class="carousel-control-prev-icon-arrow"></span>
         </span>
-        <span class="visually-hidden m-0">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carouselExampleControls"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true">
+				<span class="visually-hidden m-0">Previous</span>
+		</button>
+		<button
+				class="carousel-control-next"
+				data-bs-slide="next"
+				data-bs-target="#carouselExampleControls"
+				type="button">
+        <span aria-hidden="true" class="carousel-control-next-icon">
           <span class="carousel-control-next-icon-arrow"></span
-        ></span>
-        <span class="visually-hidden m-0">Next</span>
-      </button>
-    </div>
-
-    <div class="subscribe">
-      <div
-        class="container-xl text-center align-items-center align-items-lg-end d-flex flex-column flex-lg-row justify-content-lg-between"
-      >
-        <figure>
-          <img src="images/subscibe/face.png" alt="face" />
-          <figcaption class="face-text text-black">
-            “Vestibulum quis porttitor dui! Quisque viverra nunc mi,
-            <i>a pulvinar purus condimentum“</i>
-          </figcaption>
-        </figure>
-        <form method="post">
-          <div class="form-label">
-            SUBSCRIBE
-            <p>FOR OUR NEWLETTER AND PROMOTION</p>
-          </div>
-          <div class="input-group">
-            <input
-              id="email-input"
-              type="email"
-              class="form-control"
-              placeholder="Enter Your Email"
-              aria-label="email"
-              aria-describedby="button-addon2"
-            />
-            <button class="btn btn-primary" type="button" id="button-addon2">
-              Subscribe
-            </button>
-          </div>
-        </form>
-      </div>
-    </div>
-    <footer class="bg-black">
-      <div
-        class="footer container-xl d-flex flex-column-reverse flex-md-row justify-content-md-between align-items-center"
-      >
-        <p class="text-white">© 2021 Brand All Rights Reserved.</p>
-
-        <div class="d-flex gap-2">
-          <a class="" href="#" target="_blank" rel="noopener"
-            ><img src="images/footer/Facebook.svg" alt="instagram"
-          /></a>
-          <a class="" href="#" target="_blank" rel="noopener"
-            ><img src="images/footer/Instagram.svg" alt="Telegram"
-          /></a>
-          <a class="" href="#" target="_blank" rel="noopener"
-            ><img src="images/footer/Printerest.svg" alt="WhatsApp"
-          /></a>
-          <a class="" href="#" target="_blank" rel="noopener"
-            ><img src="images/footer/Twitter.svg" alt="WhatsApp"
-          /></a>
-        </div>
-      </div>
-    </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-      crossorigin="anonymous"
-    ></script>
-    <script src="main.js"></script>
-  </body>
+          ></span>
+				<span class="visually-hidden m-0">Next</span>
+		</button>
+</div>
+<div class="productDesc container-xl d-flex flex-column align-items-center">
+		<hr class="productDesc__line">
+		<div class="filter-settings mt-1 mt-sm-0 g-col-1">
+				<div class="filter-settings-item"><p>CHOOSE COLOR</p></div>
+				<div class="filter-settings-item dropdown-mini">
+						<p>CHOOSE SIZE</p>
+				</div>
+				<div class="filter-settings-item"><p>QUANTITY</p></div>
+		</div>
+		<button class="btn btn-outline-primary productDesc__button" type="button"><img alt="cart"
+				src="images/product/cart.svg">Add to cart
+		</button>
+</div>
+<div class="subscribe">
+		<div
+				class="container-xl text-center align-items-center align-items-lg-end d-flex flex-column flex-lg-row justify-content-lg-between"
+		>
+				<figure>
+						<img alt="face" src="images/subscibe/face.png"/>
+						<figcaption class="face-text text-black">
+								“Vestibulum quis porttitor dui! Quisque viverra nunc mi,
+								<i>a pulvinar purus condimentum“</i>
+						</figcaption>
+				</figure>
+				<form method="post">
+						<div class="form-label">
+								SUBSCRIBE
+								<p>FOR OUR NEWLETTER AND PROMOTION</p>
+						</div>
+						<div class="input-group">
+								<input
+										aria-describedby="button-addon2"
+										aria-label="email"
+										class="form-control"
+										id="email-input"
+										placeholder="Enter Your Email"
+										type="email"
+								/>
+								<button class="btn btn-primary" id="button-addon2" type="button">
+										Subscribe
+								</button>
+						</div>
+				</form>
+		</div>
+</div>
+<footer class="bg-black">
+		<div
+				class="footer container-xl d-flex flex-column-reverse flex-md-row justify-content-md-between align-items-center"
+		>
+				<p class="text-white">© 2021 Brand All Rights Reserved.</p>
+				<div class="d-flex gap-2">
+						<a class="" href="#" rel="noopener" target="_blank"
+						><img alt="instagram" src="images/footer/Facebook.svg"
+						/></a>
+						<a class="" href="#" rel="noopener" target="_blank"
+						><img alt="Telegram" src="images/footer/Instagram.svg"
+						/></a>
+						<a class="" href="#" rel="noopener" target="_blank"
+						><img alt="WhatsApp" src="images/footer/Printerest.svg"
+						/></a>
+						<a class="" href="#" rel="noopener" target="_blank"
+						><img alt="WhatsApp" src="images/footer/Twitter.svg"
+						/></a>
+				</div>
+		</div>
+</footer>
+<script crossorigin="anonymous"
+		integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+		src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"></script>
+<script crossorigin="anonymous"
+		integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"></script>
+</body>
 </html>
