complited product page

--- a/product.html
+++ b/product.html
@@ -215,18 +215,98 @@
 		</button>
 </div>
 <div class="productDesc container-xl d-flex flex-column align-items-center">
-		<hr class="productDesc__line">
-		<div class="filter-settings mt-1 mt-sm-0 g-col-1">
-				<div class="filter-settings-item"><p>CHOOSE COLOR</p></div>
-				<div class="filter-settings-item dropdown-mini">
+		<h1 class="productDesc__heading text-primary ">WOMEN COLLECTION</h1>
+		<div class="productDesc__line1"></div>
+		<h2 class="productDesc__name">MOSCHINO CHEAP AND CHIC</h2>
+		<p class="productDesc__text text-center">Compellingly actualize fully researched processes before proactive
+				outsourcing.
+				Progressively syndicate
+				collaborative architectures before cutting-edge services. Completely visualize parallel core competencies rather
+				than exceptional portals. </p>
+		<span class="productDesc__price text-primary">$561</span>
+		<hr class="productDesc__line2">
+		<div class="filter-settings productDesc__filter-settings mt-1 mt-sm-0 g-col-1">
+				<div class="filter-settings-item productDesc__filter-settings-item"><p>CHOOSE COLOR</p></div>
+				<div class="filter-settings-item productDesc__filter-settings-item dropdown-mini">
 						<p>CHOOSE SIZE</p>
 				</div>
-				<div class="filter-settings-item"><p>QUANTITY</p></div>
+				<div class="filter-settings-item productDesc__filter-settings-item"><p>QUANTITY</p></div>
 		</div>
 		<button class="btn btn-outline-primary productDesc__button" type="button"><img alt="cart"
 				src="images/product/cart.svg">Add to cart
 		</button>
 </div>
+<section class="catalog product__catalog container-xl d-flex flex-column align-items-center">
+		<div class="catalog__cards grid">
+				<figure class="catalog__card">
+						<div class="img__wrapper w-100 position-relative">
+								<div class="hover_bg position-absolute w-100 h-100">
+										<img
+												alt="add_to_cart"
+												class="position-absolute top-50 start-50 translate-middle"
+												src="images/add_to_cart.svg"
+										/>
+								</div>
+								<img alt="catalog-image-1" src="images/catalog/1.png"/>
+						</div>
+
+						<div class="catalog__card-desc">
+								<h3>ELLERY X M'O CAPSULE</h3>
+								<p class="desc-text">
+										Known for her sculptural takes on traditional tailoring,
+										Australian arbiter of cool Kym Ellery teams up with Moda
+										Operandi.hfg
+								</p>
+								<p class="desc-price text-primary">$52.00</p>
+						</div>
+				</figure>
+				<figure class="catalog__card">
+						<div class="img__wrapper w-100 position-relative">
+								<div class="hover_bg position-absolute w-100 h-100">
+										<img
+												alt="add_to_cart"
+												class="position-absolute top-50 start-50 translate-middle"
+												src="images/add_to_cart.svg"
+										/>
+								</div>
+								<img alt="futured-image-2" src="images/catalog/2.png"/>
+						</div>
+
+						<div class="catalog__card-desc">
+								<h3>ELLERY X M'O CAPSULE</h3>
+								<p class="desc-text">
+										Known for her sculptural takes on traditional tailoring,
+										Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+								</p>
+								<p class="desc-price text-primary">$52.00</p>
+						</div>
+				</figure>
+				<figure class="catalog__card">
+						<div class="img__wrapper w-100 position-relative">
+								<div class="hover_bg position-absolute w-100 h-100">
+										<img
+												alt="add_to_cart"
+												class="position-absolute top-50 start-50 translate-middle"
+												src="images/add_to_cart.svg"
+										/>
+								</div>
+								<img alt="catalog-image-3" src="images/catalog/3.png"/>
+						</div>
+
+						<div class="catalog__card-desc">
+								<h3>ELLERY X M'O CAPSULE</h3>
+								<p class="desc-text">
+										Known for her sculptural takes on traditional tailoring,
+										Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+								</p>
+								<p class="desc-price text-primary">$52.00</p>
+						</div>
+				</figure>
+
+		</div>
+
+</section>
+
 <div class="subscribe">
 		<div
 				class="container-xl text-center align-items-center align-items-lg-end d-flex flex-column flex-lg-row justify-content-lg-between"
