complited cart page

--- a/catalog.html
+++ b/catalog.html
@@ -140,7 +140,7 @@
 	</div>
 </nav>
 
-<header class="newArrivals">
+<header class="headName">
 	<div
 			class="container-xl d-sm-flex justify-content-sm-between align-items-sm-center"
 	>
