--- a/cart.html
+++ b/cart.html
@@ -6,7 +6,7 @@
 		<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 		<link href="favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 		<link href="index.css" rel="stylesheet"/>
-		<title>Product</title>
+		<title>Cart</title>
 </head>
 <body>
 <nav class="navbar bg-black">
@@ -153,154 +153,54 @@
 		<div
 				class="container-xl d-sm-flex justify-content-sm-between align-items-sm-center"
 		>
-				<h1 class="text-primary text-center">NEW ARRIVALS</h1>
-				<nav aria-label="breadcrumb">
-						<ol class="breadcrumb justify-content-center">
-								<li class="breadcrumb-item"><a href="#">Home</a></li>
-								<li class="breadcrumb-item"><a href="#">Men</a></li>
-								<li aria-current="page" class="breadcrumb-item active">
-										NEW ARRIVALS
-								</li>
-						</ol>
-				</nav>
+				<h1 class="text-primary text-center">SHOPPING CART</h1>
 		</div>
 </header>
-<div
-		class="carousel slide"
-		data-bs-interval="false" id="carouselExampleControls"
->
-		<div class="carousel-inner h-100 container-xl">
-				<div class="carousel-item active">
-						<img
-								alt="product-image"
-								class="d-block"
-								src="images/product/product-image.png"
-						/>
+<main class="theCart container-xl grid">
+		<div class="g-col-12 g-col-lg-7 cartList">
+				<div class="cartList__card">
+						<img class="cartList__img " src="images/catalog/3.png" alt="cartImg">
+						<div class="cartList__disc">
+								<h3>MANGO PEOPLE T&#8209;SHIRT</h3>
+								<p class="cartList__disc-margin">Price: <span class="text-primary">$300</span></p>
+								<p class="cartList__disc-margin">Color: Red</p>
+								<p class="cartList__disc-margin">Size: Xl</p>
+								<div class="cartList__disc-margin"><label for="quantity-1">Quantity: </label><input
+										class="cartList__quant" value="2" type="text" id="quantity-1"></div>
+						</div>
+						<button type="button" class="btn-close cartList__btnClose" aria-label="Close"></button>
 				</div>
-				<div class="carousel-item">
-						<img
-								alt="product-image"
-								class="d-block"
-								src="images/product/product-image.png"
-						/>
+				<div class="cartList__card">
+						<img class="cartList__img " src="images/catalog/2.png" alt="cartImg">
+						<div class="cartList__disc">
+								<h3>MANGO PEOPLE T&#8209;SHIRT</h3>
+								<p class="cartList__disc-margin">Price: <span class="text-primary">$300</span></p>
+								<p class="cartList__disc-margin">Color: Red</p>
+								<p class="cartList__disc-margin">Size: Xl</p>
+								<div class="cartList__disc-margin"><label for="quantity-2">Quantity: </label><input
+										class="cartList__quant" value="2" type="text" id="quantity-2"></div>
+						</div>
+						<button type="button" class="btn-close cartList__btnClose" aria-label="Close"></button>
 				</div>
-				<div class="carousel-item">
-						<img
-								alt="product-image"
-								class="d-block"
-								src="images/product/product-image.png"
-						/>
+				<div class="cartList__btns">
+						<button type="button" class="btn btn-outline-secondary cartList__btn">Clear shopping cart</button>
+						<button type="button" class="btn btn-outline-secondary cartList__btn">Continue shopping</button>
 				</div>
 		</div>
-		<button
-				class="carousel-control-prev"
-				data-bs-slide="prev"
-				data-bs-target="#carouselExampleControls"
-				type="button"
-		>
-        <span aria-hidden="true" class="carousel-control-prev-icon">
-          <span class="carousel-control-prev-icon-arrow"></span>
-        </span>
-				<span class="visually-hidden m-0">Previous</span>
-		</button>
-		<button
-				class="carousel-control-next"
-				data-bs-slide="next"
-				data-bs-target="#carouselExampleControls"
-				type="button">
-        <span aria-hidden="true" class="carousel-control-next-icon">
-          <span class="carousel-control-next-icon-arrow"></span
-          ></span>
-				<span class="visually-hidden m-0">Next</span>
-		</button>
-</div>
-<div class="productDesc container-xl d-flex flex-column align-items-center">
-		<h1 class="productDesc__heading text-primary ">WOMEN COLLECTION</h1>
-		<div class="productDesc__line1"></div>
-		<h2 class="productDesc__name">MOSCHINO CHEAP AND CHIC</h2>
-		<p class="productDesc__text text-center">Compellingly actualize fully researched processes before proactive
-				outsourcing.
-				Progressively syndicate
-				collaborative architectures before cutting-edge services. Completely visualize parallel core competencies rather
-				than exceptional portals. </p>
-		<span class="productDesc__price text-primary">$561</span>
-		<hr class="productDesc__line2">
-		<div class="filter-settings productDesc__filter-settings mt-1 mt-sm-0 g-col-1">
-				<div class="filter-settings-item productDesc__filter-settings-item"><p>CHOOSE COLOR</p></div>
-				<div class="filter-settings-item productDesc__filter-settings-item dropdown-mini">
-						<p>CHOOSE SIZE</p>
-				</div>
-				<div class="filter-settings-item productDesc__filter-settings-item"><p>QUANTITY</p></div>
+		<form class="g-col-12 g-col-sm-6 addressForm">
+				<h3 class="text-black addressForm__heading">SHIPPING ADRESS</h3>
+				<input class="addressForm__input" type="text" placeholder="Country">
+				<input class="addressForm__input" type="text" placeholder="State">
+				<input class="addressForm__input" type="text" placeholder="Postcode/Zip">
+				<button type="button" class="btn btn-outline-secondary align-self-start addressForm__btn">Get a quote</button>
+		</form>
+		<div class="g-col-12 g-col-sm-6 checkout">
+				<p class="checkout__subTotal">SUB TOTAL<span>$900</span></p>
+				<p class="checkout__grandTotal">GRAND TOTAL<span class="text-primary">$900</span></p>
+				<hr class="checkout__line">
+				<button type="button" class="btn btn-primary checkout__btn">PROCEED TO CHECKOUT</button>
 		</div>
-		<button class="btn btn-outline-primary productDesc__button" type="button"><img alt="cart"
-				src="images/product/cart.svg">Add to cart
-		</button>
-</div>
-<section class="catalog product__catalog container-xl d-flex flex-column align-items-center">
-		<div class="catalog__cards grid">
-				<figure class="catalog__card">
-						<div class="img__wrapper w-100 position-relative">
-								<div class="hover_bg position-absolute w-100 h-100">
-										<img
-												alt="add_to_cart"
-												class="position-absolute top-50 start-50 translate-middle"
-												src="images/add_to_cart.svg"
-										/>
-								</div>
-								<img alt="catalog-image-1" src="images/catalog/1.png"/>
-						</div>
-						<div class="catalog__card-desc">
-								<h3>ELLERY X M'O CAPSULE</h3>
-								<p class="desc-text">
-										Known for her sculptural takes on traditional tailoring,
-										Australian arbiter of cool Kym Ellery teams up with Moda
-										Operandi.hfg
-								</p>
-								<p class="desc-price text-primary">$52.00</p>
-						</div>
-				</figure>
-				<figure class="catalog__card">
-						<div class="img__wrapper w-100 position-relative">
-								<div class="hover_bg position-absolute w-100 h-100">
-										<img
-												alt="add_to_cart"
-												class="position-absolute top-50 start-50 translate-middle"
-												src="images/add_to_cart.svg"
-										/>
-								</div>
-								<img alt="futured-image-2" src="images/catalog/2.png"/>
-						</div>
-						<div class="catalog__card-desc">
-								<h3>ELLERY X M'O CAPSULE</h3>
-								<p class="desc-text">
-										Known for her sculptural takes on traditional tailoring,
-										Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-								</p>
-								<p class="desc-price text-primary">$52.00</p>
-						</div>
-				</figure>
-				<figure class="catalog__card">
-						<div class="img__wrapper w-100 position-relative">
-								<div class="hover_bg position-absolute w-100 h-100">
-										<img
-												alt="add_to_cart"
-												class="position-absolute top-50 start-50 translate-middle"
-												src="images/add_to_cart.svg"
-										/>
-								</div>
-								<img alt="catalog-image-3" src="images/catalog/3.png"/>
-						</div>
-						<div class="catalog__card-desc">
-								<h3>ELLERY X M'O CAPSULE</h3>
-								<p class="desc-text">
-										Known for her sculptural takes on traditional tailoring,
-										Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-								</p>
-								<p class="desc-price text-primary">$52.00</p>
-						</div>
-				</figure>
-		</div>
-</section>
+</main>
 <div class="subscribe">
 		<div
 				class="container-xl text-center align-items-center align-items-lg-end d-flex flex-column flex-lg-row justify-content-lg-between"
